Removed last commit

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<input type="radio" name="format-radios" value="JAVA" title="String type"> Java
 			<input type="radio" name="format-radios"  value="JS" title="String type"> JavaScript
 			<input type="radio" name="format-radios" value="OTHER" > Other
-			<input type="text" size="10" id="other-front-format" placeholder="Front"> [ </input>
-			<input type="text" size="10" id="other-front-wrap-format" placeholder="Front wrap">(</input>
-			<input type="text" size="10" id="other-end-wrap-format" placeholder="End wrap">)</input>	
-			<input type="text" size="10" id="other-end-format" placeholder="End">]</input>
+			<input type="text" size="10" id="other-front-format" placeholder="Front">
+			<input type="text" size="10" id="other-front-wrap-format" placeholder="Front wrap">
+			<input type="text" size="10" id="other-end-wrap-format" placeholder="End wrap">
+			<input type="text" size="10" id="other-end-format" placeholder="End">
 			<br>
 			INPUT
 			<br>
