Added Death Roll link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			Columns <input type="text" size="4" id="cols" value="25">
 			<button id="format-data" onclick="resize();">Resize</button>
 			<h5>Version:1.2.2</h5>
+			<a href="http://aws-hyper-roll-api-env.eba-bnjkra7u.us-west-1.elasticbeanstalk.com/"> Death Roll!</a>
 		</body>
 	</div>
 </html>
